# tokensave

./: .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  README.md  build.rs  quick-setup.md
docs/superpowers/plans/: 2026-03-27-daemon-mode.md
src/: cloud.rs  codegraph.rs  config.rs  daemon.rs  display.rs  doctor.rs  global_db.rs  lib.rs  main.rs  tokensave.rs  types.rs  user_config.rs
src/agents/: claude.rs  cline.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  mod.rs  opencode.rs  roo_code.rs  zed.rs
src/context/: builder.rs
src/db/: connection.rs  queries.rs
src/extraction/: bash_extractor.rs  batch_extractor.rs  c_extractor.rs  cobol_extractor.rs  complexity.rs  cpp_extractor.rs  csharp_extractor.rs  dart_extractor.rs  fortran_extractor.rs  go_extractor.rs  gwbasic_extractor.rs  java_extractor.rs  kotlin_extractor.rs  lua_extractor.rs  mod.rs  msbasic2_extractor.rs  nix_extractor.rs  objc_extractor.rs  pascal_extractor.rs  perl_extractor.rs  php_extractor.rs  powershell_extractor.rs  proto_extractor.rs  python_extractor.rs  qbasic_extractor.rs  ruby_extractor.rs  rust_extractor.rs  scala_extractor.rs  swift_extractor.rs  ts_provider.rs  typescript_extractor.rs  vbnet_extractor.rs  zig_extractor.rs
src/mcp/: server.rs
src/resources/: logo.ansi
tests/: c_extraction_test.rs  cloud_test.rs  fixture_extraction_test.rs  fortran_extraction_test.rs  gwbasic_extraction_test.rs  kotlin_extraction_test.rs  pascal_extraction_test.rs  perl_extraction_test.rs  user_config_test.rs  zig_extraction_test.rs
tests/fixtures/: sample.f90  sample.gw  sample.pl  sample.zig
